<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_PanelDeControl" Id="{4125b4fd-54c0-4476-b867-203b20e49183}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_PanelDeControl
VAR
	
	// FB de cambio de flanco para la detección de las pulsaciones del botón verde
	tRTrigSacar			: R_TRIG;
	
	// Memoria para la pulsación del paro
	bReset : BOOL;
	
	// Memoria para determinar qué color se está seleccionando en cada momento
	iSolicitudColor: COLOR;
	
END_VAR

VAR_INPUT
	
	// Variable que almacena la cantidad de cajas que el operario desea sacar
	iSolicitud: INT := 0;
	
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[tRTrigSacar(CLK:= GVL_Almacen.Sacar);

(* Aquí sumamos el número de cajas a sacar por cada pulsación del botón verde *)

IF tRTrigSacar.Q THEN
	iSolicitud := iSolicitud + 1;
END_IF

(* BOTÓN NARANJA. Paro fin de ciclo *)

IF GVL_Almacen.bReset THEN
	bReset := TRUE;
END_IF

IF bReset AND PRG_RetiradaAlmacen.SELECCION > 2 THEN
	iSolicitud := 1;
END_IF


(* Rosca de selección del tipo de caja. Activa y desactiva los LEDs correspondientes y almacena en una memoria qué solicitud se está haciendo *)
	
IF GVL_Almacen.sSelector.StateAzul THEN
	GVL_Almacen.LedAzul := TRUE;
	GVL_Almacen.LedVerde := FALSE;
	GVL_Almacen.LedMetal := FALSE;
	iSolicitudColor := AZUL;
	GVL_Almacen.iDisplay := PRG_Almacen.iCantidadAzul;
END_IF

IF NOT GVL_Almacen.sSelector.StateMetal AND NOT GVL_Almacen.sSelector.StateAzul THEN
	GVL_Almacen.LedAzul := FALSE;
	GVL_Almacen.LedVerde := TRUE;
	GVL_Almacen.LedMetal := FALSE;
	iSolicitudColor := VERDE;
	GVL_Almacen.iDisplay := PRG_Almacen.iCantidadVerde;
END_IF

IF GVL_Almacen.sSelector.StateMetal THEN
	GVL_Almacen.LedAzul := FALSE;
	GVL_Almacen.LedVerde := FALSE;
	GVL_Almacen.LedMetal := TRUE;
	iSolicitudColor := METAL;
	GVL_Almacen.iDisplay := PRG_Almacen.iCantidadMetal;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="PRG_PanelDeControl">
      <LineId Id="150" Count="1" />
      <LineId Id="131" Count="5" />
      <LineId Id="138" Count="8" />
      <LineId Id="137" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="103" Count="2" />
      <LineId Id="125" Count="1" />
      <LineId Id="23" Count="2" />
      <LineId Id="107" Count="1" />
      <LineId Id="106" Count="0" />
      <LineId Id="127" Count="1" />
      <LineId Id="32" Count="2" />
      <LineId Id="111" Count="1" />
      <LineId Id="110" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="41" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>